2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsdaemondbus.[ch]:
	In call_sync, on stale cache errors due to a
	mount daemon disappearing, invalidate caches and
	return G_VFS_ERROR_RETRY so that the caller can
	retry with fresh caches.
	
        * client/gdaemonfile.c:
	Retry calls on G_VFS_ERROR_RETRY.

2008-03-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_pop_job):
	fix race that could cause uploads to stop

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Bump version to 0.99.1 for unstable development
	Stable branch is gnome-2-22

2008-03-28  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendsftp.c:
	* daemon/gvfsjobclosewrite.c:
	Plug some more minor memory leaks.

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.2.2 ===

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* daemon/Makefile.am (gvfsd_smb_SOURCES):
	Dist libsmb-compat.h.

	* NEWS:
	Update for release

2008-03-28  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Silence out libtool if
	make is invoked with --silence.

2008-03-28  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendtrash.c: plug some minor memory leaks.

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfileenumerator.c (g_daemon_file_enumerator_next_file):
	Actually increment count so that timeouts works.
	Pointed out by Joe Marcus Clarke

2008-03-27  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Handle all target exists errors correctly
	in move. This should make us not silently
	overwrite files.
	
        * daemon/gvfsjobmove.[ch]:
        Add g_vfs_job_move_progress_callback

2008-03-27  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Introduce helpers for multi-request ops.
	Use it for query_info.

2008-03-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c: